inclusão de usuário e carro

--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,3 +1,4 @@
+<app-menu-list></app-menu-list>
 <div class="example-container mat-elevation-z8">
 
     <h2>Lista de Carros</h2>
@@ -8,7 +9,7 @@
 
     <div class="button-row">
         <a mat-flat-button color="primary" [routerLink]="['/car-create']">
-            <mat-icon>add</mat-icon> Cases
+            <mat-icon>add</mat-icon> Add
         </a>
     </div>
 
