--- a/src/app/car-create/car-create.component.html
+++ b/src/app/car-create/car-create.component.html
@@ -1,1 +1,32 @@
-<p>car-create works!</p>
+<div class="example-container mat-elevation-z8">
+
+    <h2>Criar Carro</h2>
+    <div class="example-loading-shade" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
+
+    <div class="button-row">
+        <a mat-flat-button color="primary" [routerLink]="['/car-list']">
+            <mat-icon>list</mat-icon>
+        </a>
+    </div>
+
+    <mat-card class="example-card">
+        <form [formGroup]="carForm" (ngSubmit)="onFormSubmit()">
+            <mat-form-field class="example-full-width">
+                <mat-label>Modelo</mat-label>
+                <input matInput placeholder="Modelo ..." formControlName="model">
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>Marca</mat-label>
+                <input matInput placeholder="Marca ..." formControlName="brand">
+            </mat-form-field>
+
+            <div class="button-row">
+                <button type="submit" mat-flat-button color="primary">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
+        </form>
+    </mat-card>
+</div>
