--- a/src/app/user-create/user-create.component.html
+++ b/src/app/user-create/user-create.component.html
@@ -1,1 +1,32 @@
-<p>user-create works!</p>
+<div class="example-container mat-elevation-z8">
+
+    <h2>Criar Usuário</h2>
+    <div class="example-loading-shade" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
+
+    <div class="button-row">
+        <a mat-flat-button color="primary" [routerLink]="['/user-list']">
+            <mat-icon>list</mat-icon>
+        </a>
+    </div>
+
+    <mat-card class="example-card">
+        <form [formGroup]="userForm" (ngSubmit)="onFormSubmit()">
+            <mat-form-field class="example-full-width">
+                <mat-label>Name</mat-label>
+                <input matInput placeholder="Name ..." formControlName="name">
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="Email ..." formControlName="email">
+            </mat-form-field>
+
+            <div class="button-row">
+                <button type="submit" mat-flat-button color="primary">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
+        </form>
+    </mat-card>
+</div>
