--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,5 +1,5 @@
 <app-menu-list></app-menu-list>
-<div class="example-container mat-elevation-z8">
+<div class="car">
 
     <h2>Lista de Carros</h2>
 
