--- a/src/app/menu-list/menu-list.component.scss
+++ b/src/app/menu-list/menu-list.component.scss
@@ -1,4 +1,8 @@
 .example-container {
-    position: relative;
-    padding: 10px;
-  }
+  position: relative;
+  margin-bottom: 20px;
+}
+
+a {
+  margin-right: 20px;
+}
