--- a/src/app/user-create/user-create.component.html
+++ b/src/app/user-create/user-create.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div class="container">
 
     <h2>Criar Usuário</h2>
     <div class="example-loading-shade" *ngIf="isLoadingResults">
