--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <app-menu-list></app-menu-list>
-<div class="example-container mat-elevation-z8">
+<div class="container">
 
     <h2>Lista de Usuários</h2>
 
