--- a/src/app/rent-list/rent-list.component.html
+++ b/src/app/rent-list/rent-list.component.html
@@ -36,15 +36,18 @@
                 <td mat-cell *matCellDef="let row">{{row.status ? "Alugado" : "Disponível"}}</td>
             </ng-container>
 
+            <!-- Cases Status Column -->
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>Ações</th>
+                <td mat-cell *matCellDef="let row">
+                    <div *ngIf="row.status"><mat-icon (click)="returnCar(row)">keyboard_return</mat-icon></div>
+                    <div *ngIf="!row.status"><mat-icon aria-disabled>check_box</mat-icon></div>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-            <tr>
         </table>
     </div>
 
 </div>
-
-{{ "Rents: " + (rents | json) }}<br/><br/>
-{{ "Users: " + (users | json) }}<br/><br/>
-{{ "Cars: " + (cars | json) }}<br/><br/>
-{{ "Data: " + (data | json) }}<br/><br/>
